[gd_scene load_steps=7 format=3 uid="uid://1xr5qopgm57i"]

[ext_resource type="Script" uid="uid://ndmr52dllwad" path="res://scripts/global/GameManager.gd" id="1_34tde"]
[ext_resource type="Resource" uid="uid://v0x75ukrrln7" path="res://assets/resources/player/player.tres" id="2_3dus2"]
[ext_resource type="Theme" uid="uid://ssbhgf25fdh8" path="res://assets/resources/ui/themes/button/button_theme.tres" id="2_qppyr"]
[ext_resource type="Script" uid="uid://dmmt046g5n2t" path="res://scripts/menus/inventory_box.gd" id="3_4dhvd"]

[sub_resource type="Gradient" id="Gradient_qppyr"]
offsets = PackedFloat32Array(0.602439, 0.992683)
colors = PackedColorArray(0.660395, 0.660396, 0.660395, 1, 0.327299, 0.327299, 0.327299, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4dhvd"]
gradient = SubResource("Gradient_qppyr")
width = 562
height = 1295
fill = 1
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)

[node name="GameManager" type="Node"]
script = ExtResource("1_34tde")
player = ExtResource("2_3dus2")

[node name="QuestBox" type="CanvasLayer" parent="."]
visible = false

[node name="QuestTitle" type="RichTextLabel" parent="QuestBox"]
offset_right = 339.0
offset_bottom = 25.0
theme = ExtResource("2_qppyr")
text = "QuestTitle"

[node name="QuestDescription" type="RichTextLabel" parent="QuestBox"]
offset_left = 1.0
offset_top = 24.0
offset_right = 319.0
offset_bottom = 47.0
theme = ExtResource("2_qppyr")
text = "Quest Description"

[node name="InventoryBox" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_4dhvd")

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryBox"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1295.0
offset_right = 562.0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="InventoryBox/VBoxContainer"]
position = Vector2(280, 648)
texture = SubResource("GradientTexture2D_4dhvd")

[node name="InventoryLabel" type="RichTextLabel" parent="InventoryBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Inventory"
fit_content = true
horizontal_alignment = 1

[connection signal="hide_inventory" from="." to="InventoryBox" method="_on_hide_inventory"]
[connection signal="show_inventory" from="." to="InventoryBox" method="_on_show_inventory"]
